feat(chatbot): added ui to handle some things

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-OPENAI_API_KEY=your_openai_api_key_here
+CALCOM_API_KEY=
+DEEPSEEK_API_KEY=
+
+# Cal.com
+CALCOM_EVENT_TYPE_SLUG=
+CALCOM_USERNAME=
+
