--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "bun run src/index.ts"
+    "start": "bun run src/index.ts",
+    "web": "bun run src/index.ts",
+    "build": "node scripts/build.mjs",
+    "build-win": "node scripts/build.mjs --win"
   },
   "dependencies": {
     "@types/qrcode": "^1.5.5",
     "baileys": "^6.7.18",
     "dotenv": "^16.3.0",
     "openai": "^5.10.2",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "open": "^8.4.0"
   }
 }
