--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "bun run src/index.ts",
     "web": "bun run src/index.ts",
     "build": "node scripts/build.mjs",
-    "build-win": "node scripts/build.mjs --win"
+    "build-win": "node scripts/build.mjs --win",
+    "build:ts": "tsc -p tsconfig.json",
+    "dev:node": "tsx watch src/index.ts",
+    "start:node": "node dist/index.js"
   },
   "dependencies": {
     "@types/qrcode": "^1.5.5",
@@ -15,6 +18,11 @@
     "openai": "^5.10.2",
     "qrcode": "^1.5.4",
     "open": "^8.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.11",
+    "tsx": "^4.15.7",
+    "typescript": "^5.5.4"
   },
   "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
 }
