--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "start": "bun run src/index.ts",
-    "dev": "bun run src/index.ts",
-    "dev:node": "tsx watch src/index.ts",
+    "start": "tsx src/index.ts",
+    "dev": "tsx watch src/index.ts",
+    "dev:watch": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
     "build:obfuscated": "npm run build && node scripts/obfuscate.mjs",
     "package:secure": "npm run build:obfuscated && node scripts/create-secure-package.mjs",
@@ -45,6 +45,5 @@
   },
   "engines": {
     "node": ">=18.0.0"
-  },
-  "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
+  }
 }
