fix(prompt): better prompting

--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "tsx src/index.ts",
+    "cli": "tsx src/index.ts --cli",
     "start:node": "node --loader ts-node/esm src/index.ts",
     "start:build": "npm run build && node dist/index.js",
     "dev": "tsx watch src/index.ts",
     "dev:watch": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
+    "cli:build": "npm run build && node dist/index.js --cli",
     "build:obfuscated": "npm run build && node scripts/obfuscate.mjs",
     "package:secure": "npm run build:obfuscated && node scripts/create-secure-package.mjs",
     "package:user": "chmod +x build/create-package.sh && ./build/create-package.sh",
@@ -48,5 +50,6 @@
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b"
 }
