--- a/package.json
+++ b/package.json
@@ -13,12 +13,8 @@
     "dev:watch": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
     "cli:build": "npm run build && node dist/index.js --cli",
-    "build:obfuscated": "npm run build && node scripts/obfuscate.mjs",
-    "package:secure": "npm run build:obfuscated && node scripts/create-secure-package.mjs",
-    "package:user": "chmod +x build/create-package.sh && ./build/create-package.sh",
-    "setup": "node build/setup.js",
     "start:prod": "node dist/index.js",
-    "clean": "rm -rf dist dist-obfuscated dist-secure dist-user",
+    "clean": "rm -rf dist",
     "test": "echo \"No tests specified\" && exit 0"
   },
   "keywords": [
@@ -43,13 +39,9 @@
     "@types/node": "^20.14.11",
     "tsx": "^4.15.7",
     "ts-node": "^10.9.1",
-    "typescript": "^5.5.4",
-    "javascript-obfuscator": "^4.1.0",
-    "terser": "^5.30.0",
-    "uglify-js": "^3.17.4"
+    "typescript": "^5.5.4"
   },
   "engines": {
     "node": ">=18.0.0"
-  },
-  "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b"
+  }
 }
